--- a/전하빈.html
+++ b/전하빈.html
@@ -259,7 +259,7 @@
                 // 가장 가까운 5개의 공원 선택
                 const closestParks = parksWithDistance.slice(0, 5);
                 
-                // 가까운 5개 공원 마커 추가
+                // 가까운 5개 공원 마커 및 정보 추가
                 closestParks.forEach((v) => {
                     const name = v.공원명;
                     const vlat = v.위도;
