--- a/이상경/이상경.html
+++ b/이상경/이상경.html
@@ -189,7 +189,7 @@
                         <input type="text" id="keyword" placeholder="장소 검색...">
                         <button class="ripple" onclick="searchPlaces()">검색</button>
                         <script src="script.js"></script>
-                        // 버튼 클래스, 스크립트 src = 검색 버튼 효과
+                        <!-- 버튼 클래스, 스크립트 src = 검색 버튼 효과 -->
                     </div>
                 </div>
                 <ul id="results"></ul>
