아무것도아님

--- a/채상희.html
+++ b/채상희.html
@@ -184,7 +184,7 @@
                  <!-- 검색창을 오른쪽에 배치하기 위한 컨테이너 -->
                 <div id="search-box-container">
                     <div id="search-box">
-                        <input type="text" id="keyword" placeholder="장소 검색...">
+                        <input type="text" id="keyword">
                         <button onclick="searchPlaces()">검색</button>
                     </div>
                 </div>
