파일 경로 변경

--- a/이상경.html
+++ b/이상경.html
@@ -199,7 +199,7 @@
 
     <script type="text/javascript"
         src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6dfaf6fb0d9d9293c6bc9220328e7540&libraries=services"></script>
-    <script type="text/javascript" src="../parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
+    <script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 
     <script>
         // 현재 기온
